Fixed UI overlaps and made map lines more clear

--- a/game.css
+++ b/game.css
@@ -18,7 +18,7 @@
 				font-family:"Berkshire Swash", cursive;
 			}
 			#closed-chat{
-				border:4px solid;
+				border:3px solid;
 				border-color: rgba(247,239,153,0.9);
 				border-radius:25px;
 				margin-top:4.5vh;
@@ -34,7 +34,7 @@
 			}
 				#closed-chat > img{ align-self:center; }
 			#open-chat-container{
-				border:4px solid;
+				border:3px solid;
 				border-color: rgba(247,239,153,0.9);
 				background-color:rgba(247,142,105,0.7);
 				height:41vh;
@@ -176,7 +176,7 @@
 			user-select: none;
 		}
 			.right-button{
-				border:4px solid;
+				border:3px solid;
 				border-color: rgba(247,239,153,0.9);
 				background-color:rgba(247,142,105,0.7);
 				border-radius: 20px;
@@ -205,14 +205,14 @@
 					font-family:"Berkshire Swash",cursive;
 					color:#EEE5E9;
 					top: -3vh;
-					right:-2vh;
+					right:-3vh;
 					display:flex;
 					flex-direction:row;
 					align-items:stretch;
 					width:10vw;
 					text-align:center;
 					background-color: rgba(166,111,101,0.7));
-					border:4px solid;
+					border:3px solid;
 					border-color: rgba(247,239,153,0.9);
 					border-radius:10px;
 				}
@@ -276,7 +276,7 @@
 		background-color: rgba(61, 43, 61,0.9);
 		overflow:scroll;
 		display:none;
-		border:4px solid;
+		border:3px solid;
 		border-color: rgba(247,239,153,0.7);
 		border-radius:20px;
 	}
@@ -298,7 +298,7 @@
 		margin-left: auto;
 		top:40%;
 		left:50%;
-		border:4px solid;
+		border:3px solid;
 		border-color: rgba(247,239,153,0.7);
 		transform:translate(-50%,-50%);
 		color:white;
